<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="earthquake">Earthquake</string>
    <string name="parameters">Parameters</string>
    <string name="number_of_earthquakes">Number of Earthquakes</string>
    <string name="order_by">Order By:</string>
    <string name="start_date">Start Date:</string>
    <string name="submit">Submit</string>


</resources>
